# euclid

./: .gitignore  .gitmodules  LICENSE  justfile  meson.build
env/: native.ini  win64.ini
res/glsl/: triangle.fs  triangle.vs
src/: main.cpp
src/gfx/: init.cpp  program.hpp  shader.cpp  shader.hpp  window.hpp
src/platform/glfw/: callback.cpp  callback.hpp
src/util/: concept.hpp  string.cpp  string.hpp  types.h
